# aiogram3-template

./: .dockerignore  .gitignore  Dockerfile  README.md  dist.env  docker-compose.dev.yaml  pyproject.toml
app/: __main__.py  bot.py  config_parser.py  events.py  main.py  utils.py  web.py
app/db/: __init__.py  db_init.py  models.py
app/filter/: __init__.py  is_admin.py
app/handlers/: __init__.py  start.py
app/locales/: ru.ftl
app/middlewares/: db_session.py  translator_runner.py
app/services/: fluent.py
